not 100% correct, but finished project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Grid Box</title>
 </head>
@@ -79,5 +82,112 @@
             <button class="header-btn">Share</button>
         </div>
     </header>
+
+    <div id="main-page">
+        <div id="left-grid">
+            <div class="window">
+                <div class="window-text">
+                    <h3>Super cool project!</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Tenetur libero, voluptates est 
+                        aperiam nam nulla eligendi error eaque. 
+                        Nemo, necessitatibus.
+                    </p>
+                </div>
+                <div class="window-images">
+                    <img src="images/plus.png" alt="" class="window-img">
+                    <img src="images/eye.png" alt="" class="window-img">
+                    <img src="images/share.png" alt="" class="window-img">
+                </div>
+            </div>
+            <div class="window">
+                <div class="window-text">
+                    <h3>Super cool project!</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Tenetur libero, voluptates est 
+                        aperiam nam nulla eligendi error eaque. 
+                        Nemo, necessitatibus.
+                    </p>
+                </div>
+                <div class="window-images">
+                    <img src="images/plus.png" alt="" class="window-img">
+                    <img src="images/eye.png" alt="" class="window-img">
+                    <img src="images/share.png" alt="" class="window-img">
+                </div>
+            </div>
+            <div class="window">
+                <div class="window-text">
+                    <h3>Super cool project!</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Tenetur libero, voluptates est 
+                        aperiam nam nulla eligendi error eaque. 
+                        Nemo, necessitatibus.
+                    </p>
+                </div>
+                <div class="window-images">
+                    <img src="images/plus.png" alt="" class="window-img">
+                    <img src="images/eye.png" alt="" class="window-img">
+                    <img src="images/share.png" alt="" class="window-img">
+                </div>
+            </div>
+            <div class="window">
+                <div class="window-text">
+                    <h3>Super cool project!</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Tenetur libero, voluptates est 
+                        aperiam nam nulla eligendi error eaque. 
+                        Nemo, necessitatibus.
+                    </p>
+                </div>
+                <div class="window-images">
+                    <img src="images/plus.png" alt="" class="window-img">
+                    <img src="images/eye.png" alt="" class="window-img">
+                    <img src="images/share.png" alt="" class="window-img">
+                </div>
+            </div>
+            <div class="window">
+                <div class="window-text">
+                    <h3>Super cool project!</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Tenetur libero, voluptates est 
+                        aperiam nam nulla eligendi error eaque. 
+                        Nemo, necessitatibus.
+                    </p>
+                </div>
+                <div class="window-images">
+                    <img src="images/plus.png" alt="" class="window-img">
+                    <img src="images/eye.png" alt="" class="window-img">
+                    <img src="images/share.png" alt="" class="window-img">
+                </div>
+            </div>
+            <div class="window">
+                <div class="window-text">
+                    <h3>Super cool project!</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. 
+                        Tenetur libero, voluptates est 
+                        aperiam nam nulla eligendi error eaque. 
+                        Nemo, necessitatibus.
+                    </p>
+                </div>
+                <div class="window-images">
+                    <img src="images/plus.png" alt="" class="window-img">
+                    <img src="images/eye.png" alt="" class="window-img">
+                    <img src="images/share.png" alt="" class="window-img">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
